# anki-cloze-shuffler

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  __init__.py  manifest.json  pyproject.toml
