[project]
name = "anki-list-shuffler"
version = "0.1.0"
description = "Anki add-on shuffling lists in cards"
authors = [
    {name = "NyanKiyoshi", email = "mikail-gh@pm.me"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aqt[qt6] (>=25.2,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
